# private-pdf-rag

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
config/: settings.py
src/: document_processor.py  embeddings.py  llm_client.py  rag_pipeline.py  vector_store.py
utils/: helper.py
